--- a/my-app/src/Announcements.css
+++ b/my-app/src/Announcements.css
@@ -4,7 +4,7 @@
     margin: 0 auto;
     box-sizing: border-box;
     position: relative;
-    top: -87vh;
+    top: -115vh;
 }
 
 
@@ -58,11 +58,11 @@
     .Announcements {
         padding: 1rem;
         max-width: 100%;
-        margin: 0;
+        margin-top: -5vw;
     }
 
     .Announcements h1 {
-        font-size: 1.5rem;
+        font-size: 2.5rem;
     }
 
     .Announcement-item {
