--- a/my-app/src/Home.css
+++ b/my-app/src/Home.css
@@ -1,10 +1,9 @@
 .Home {
     position: relative;
-    top: -75vw;
-    right: -15vw;
+    top: -60vw;
+    right: -10vw;
     padding: 2rem;
     max-width: 80%;
-    margin-top: 30rem;
     z-index: 1;
     box-sizing: border-box;
     display: flex;
@@ -26,7 +25,7 @@
 
 .TitleWrapper h1 {
     position: relative;
-    top: -88vw;
+    top: -107vw;
     right: -17vw;
     margin-top: 2rem;
     max-width: 100%;
@@ -43,5 +42,14 @@
     text-align: center;
     margin: 0;
 }
+
+@media (max-width: 768px) {
+    .Home{
+        top: -150vw;
+    }
+}
+
+
+
 
 
